--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -7,38 +7,10 @@
   text-align: center;
 }
 .portfolio__title {
-  position: relative;
   color: #373d47;
   font-size: 55px;
   font-weight: 500;
-  margin-bottom: 55px;
-}
-
-.portfolio__title::before {
-  content: "";
-  position: absolute;
-  top: 72px;
-  left: 50%;
-  width: 225px;
-  height: 2px;
-  background: #373d47;
-  transform: translateX(-50%);
-  margin: 10px 0;
-}
-
-.portfolio__title::after {
-  content: "Algunos trabajos";
-  position: absolute;
-  top: 60px;
-  left: 50%;
-  width: 160px;
-  font-size: 20px;
-  font-weight: 500;
-  color: #373d47;
-  padding: 0 5px;
-  background: #f8f7f5;
-  transform: translateX(-50%);
-  margin: 10px 0;
+  margin-bottom: 30px;
 }
 
 .container__cards {
@@ -139,4 +111,9 @@
 }
 .card__btn.mod {
   width: 130px;
+}
+
+.btn--nav {
+  background: #2f3640;
+  color: #fff;
 }
