--- a/src/scss/_sectionProjects.scss
+++ b/src/scss/_sectionProjects.scss
@@ -168,18 +168,20 @@
     align-items: center;
     transform: translate(100%);
     transition: transform 0.2s ease-in-out;
+    z-index: 100;
   }
 
   .show {
     transform: translate(0);
   }
   .agregar-imagen {
+    width: 35%;
+    height: 90%;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
     object-fit: cover;
-    width: 45%;
     border-radius: 10px;
     transform: scale(0);
     transition: transform 0.3s 0.2s;
@@ -190,7 +192,7 @@
   }
   .close {
     position: absolute;
-    top: 115px;
+    top: 30px;
     right: 80px;
     width: 40px;
     cursor: pointer;
