--- a/src/scss/_breakpoints.scss
+++ b/src/scss/_breakpoints.scss
@@ -296,7 +296,7 @@
     color: #fff;
   }
   .container__skew .agregar-imagen {
-    width: 55%;
+    width: 60%;
     height: 80%;
   }
   .container__skew .close {
@@ -307,10 +307,8 @@
 @media screen and (max-width: 824px) {
   @media screen and (max-width: 768px) {
     .container__skew .agregar-imagen {
-      height: 55%;
-    }
-    .container__skew #agregar-imagen--quin {
-      height: 75%;
+      height: 80%;
+      margin-top: 60px;
     }
     .container__skew #close--quin {
       top: 12%;
@@ -320,7 +318,7 @@
       height: 500px;
     }
     .container__skew .close {
-      top: 21%;
+      top: 13%;
     }
   }
 }
@@ -358,12 +356,12 @@
     width: 320px;
   }
   .container__skew .agregar-imagen {
-    width: 80%;
-    height: 70%;
+    width: 85%;
+    height: 80%;
   }
   .container__skew .close {
     width: 35px;
-    top: 15%;
+    top: 10%;
     right: 0;
   }
   .container__skew .projects__cards {
@@ -372,16 +370,17 @@
 }
 @media screen and (max-width: 380px) {
   .container__skew #agregar-imagen--quin {
-    height: 65%;
+    width: 80%;
   }
   .container__skew #close--quin {
-    top: 17%;
+    top: 13%;
   }
-}
-@media screen and (max-width: 340px) {
   .container__skew .agregar-imagen {
     width: 80%;
-    height: 60%;
+    height: 80%;
+  }
+  .container__skew .close {
+    top: 13%;
   }
 }
 @media screen and (max-width: 320px) {
